--- a/entries/entry1/index.html
+++ b/entries/entry1/index.html
@@ -34,7 +34,7 @@
 </div>
 
 <footer>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">next</a>
 
