--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -56,7 +56,7 @@
 <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">previous</a>
     <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">next</a>
 
