--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -46,7 +46,7 @@
 <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">previous</a>
     <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">next</a>
 
