--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -83,7 +83,7 @@
 <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">previous</a>
     <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">next</a>
     
