--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -36,7 +36,7 @@
 <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">previous</a>
     <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">next</a>
 
