--- a/entries/entry6/index.html
+++ b/entries/entry6/index.html
@@ -44,7 +44,7 @@
  <footer>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry5/">previous</a>
     <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/">home</a>
+    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
   </footer>
   
 
