--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,6 +32,8 @@ div.scrollmenu a:hover {
 
 <body>
 
+<h1> FRAGMENTS OF CHILDHOOD MEMORIES </h1>
+
 <div class="ordered-text" id="text1">
 	<p><a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">Want to read?</a></p>
 </div>
