--- a/entries/entry7/index.html
+++ b/entries/entry7/index.html
@@ -18,10 +18,10 @@
  <svg id="mt" style="vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M646.4 1015.893333h-268.8a128 128 0 0 1-128-118.186666l-33.28-438.186667A107.093333 107.093333 0 0 1 128 354.56a105.386667 105.386667 0 0 1 42.666667-85.333333c15.36-132.266667 162.56-235.946667 341.333333-235.946667a431.36 431.36 0 0 1 167.253333 32.853333l21.76-42.666666a42.666667 42.666667 0 0 1 57.6-17.066667 42.666667 42.666667 0 0 1 17.92 57.6l-23.04 42.666667A235.093333 235.093333 0 0 1 853.333333 268.373333a105.386667 105.386667 0 0 1 42.666667 85.333334 107.093333 107.093333 0 0 1-88.32 104.96L773.973333 896a128 128 0 0 1-127.573333 119.893333z m-344.32-554.666666l32.853333 429.653333a42.666667 42.666667 0 0 0 42.666667 39.68h268.8a42.666667 42.666667 0 0 0 42.666667-39.68l32.853333-429.653333z m-67.413333-128a21.333333 21.333333 0 0 0-21.333334 21.333333 21.333333 21.333333 0 0 0 21.333334 21.333333h554.666666a21.333333 21.333333 0 0 0 21.333334-21.333333 21.333333 21.333333 0 0 0-21.333334-21.333333z m29.866666-85.333334h494.933334a157.866667 157.866667 0 0 0-46.506667-61.44l-13.653333 26.88a42.666667 42.666667 0 1 1-75.946667-42.666666l15.786667-29.866667a346.026667 346.026667 0 0 0-128-23.466667c-116.053333 1.28-217.6 56.746667-246.613334 129.28z"  /></svg>
 
 <div class="left-image">
-	<div class="ho1">
-		<p>Left Image Section</p>
-	</div>
-	<img src="datb.png" alt="milk tea" width="299" height="470">
+	<img src="datb.png" alt="milk tea" width="299" height="470" class="image1">
+	<div class="hover1">
+		<div class="text1">Early milk tea had simple packaging with bright colors, which easily attracted children to buy it.</div>
+	</div>	
 </div>
 
 <div class="center-text">
@@ -31,11 +31,19 @@
 </div>
 
 <div class="right-image">
-	<img src="fkj.png" alt="drink-sealing machine" width="390" height="435">
+	<img src="fkj.png" alt="drink-sealing machine" width="390" height="435" class="image2">
+	<div class="hover2">
+		<div class="text2">The drink-sealing machine can automatically seal cups with plastic cup sealing films, making milk tea easier for people to carry.
+		</div>
+	</div>
 </div>
 
 <div class="bottom-image">
-	<img src="fen.png" alt="milk tea powder" width="354" height="450">
+	<img src="fen.png" alt="milk tea powder" width="354" height="450" class="image3">
+	<div class="hover3">
+		<div class="text3">These are milk tea powders with various flavors. In the past, this kind of fruit-flavored milk tea was very popular, even though it was full of pigments.
+		</div>
+	</div>
 </div>
 
 <footer>
