--- a/entries/entry2/index.html
+++ b/entries/entry2/index.html
@@ -9,17 +9,6 @@
 <link rel="stylesheet" href="https://use.typekit.net/qva6hpy.css">
 <link rel="stylesheet" href="https://use.typekit.net/etz0eof.css">
 <title>Entry 2</title>
-
-<style>
-
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-</style>
-
 </head>
 
 <body>
@@ -32,33 +21,36 @@
   <h2>small paper ticket that can be redeemed for a discount at McDonald's</h2>
 </div>
 
+<div class="container">
 
-<div class="flex-container">
-
-  <div class="flex-item1">
-    <img src="mcp.png" alt="coupons" style="width:346px; height:462px;">
+  <div class="item1">
+    <img src="mcp.png" alt="Coupons" style="width: 432px; height: 540px;">
   </div>
 
-  <div class="flex-item2">
-    <p>People in China who have experienced the 2000s must be very familiar with McDonald's coupons. These coupons are leaflets that are full of food, and just looking at them will make you salivate. The leaflet is divided into many blocks by dotted lines, and each block has the product name and price. Such a simple coupon is collected by many people, especially children. Merchants use coupons to give up uniform prices. This means selling more expensive to those who are willing to pay for a higher price and selling cheaper to those who only want to pay for a lower price. Through the use of coupons, different prices can be set for different types of consumers. Nowadays, people use coupons on their mobile phones. Electronic coupons are indeed more convenient, but people also often miss paper coupons. McDonald's coupon is the memory of an era, which collects people's happiness.
+  <div class="item2">
+    <p>People in China who have experienced the 2000s must be familiar with McDonald's paper coupons. These coupons are always printed on a single sheet of paper. You will salivate by just looking at the paper that is full of food. The paper is divided into many rectangular areas by dashed lines, and each of them has a name, photo, and price inside. Such simple coupons are collected by many people, especially children. Nowadays, people use coupons on their mobile phones. Electronic coupons are indeed more convenient, but people often miss paper coupons. Because McDonald's paper coupons are the memory of an era, which collects people's happiness.
     <br>
+    <span style='font-size:30px;'>&#127839;</span> 
+    <span style='font-size:30px;'>&#129380;</span>
+    <span style='font-size:30px;'>&#127828;</span>
     <br>
-    Before I went to primary school, McDonald's in China still used paper coupons generally. My parents liked collecting coupons. Every time I wanted to eat at McDonald's, I asked them to give me coupons so I could choose the food I wanted. Once I decided, I carefully cut out the food I wanted from a whole page of coupons. Then I held those small pieces of paper and mustered up the courage to walk to the counter and told the clerk what I wanted to order. For me, a child, this was a very ritualistic action. At that time, I didn’t have a lot of pocket money. Sometimes when I was greedy, I just took out coupons and pretended to order food. This was one of the great joys of my childhood. Now I have enough money, so I no longer need my parents’ permission to eat at McDonald's, but I lose that simple joy.
+    Before I went to primary school, McDonald's in China still used paper coupons generally. Same as many people, my parents liked collecting coupons. Every time I wanted to eat at McDonald's, I asked them to give me coupons so I could choose the food I wanted. Once I decided, I carefully cut out the coupon with the food I wanted from a sheet of coupons by following the dashed lines. Then I held these small pieces of paper and mustered up my courage to walk to the counter and told the clerk what I wanted to order. For me, a child, this was a very ceremonial action. At that time, I didn’t have a lot of pocket money. Sometimes when I was greedy, I just took out coupons and pretended to order food. This was one of the great joys of my childhood. Now I have enough money, so I no longer need my parents’ permission to eat at McDonald's, but sometimes I miss that simple joy.
   </div>
 </div>
 
-<div class="flex-container2">
-  <div class="flex-item3">
-    <img src="mss.png" style="width:495px; height:322px;">
+<div class="container2">
+  <div class="item3">
+    <img src="mss.png" alt="Ronald McDonald" style="width: 495px; height: 322px;">
   </div>
 </div>
 
 <footer>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">previous</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">next</a>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry1/">previous</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry3/">next</a>
+</footer>
 
 </body>
 </html>
