--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -7,85 +7,70 @@
 <link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <link rel="stylesheet" href="https://use.typekit.net/dyu8pyk.css">
 <title>Entry 3</title>
-
-<style>
-
-  .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-}
-
- .flex-item1,
- .flex-item2,
- .flex-item3,
- .flex-item4 {
-  margin: 1px;
- }
-
-@media (max-width: 768px) {
-  .flex-container {
-    flex: 1 0 100%; 
-  }
-}
-
-</style>
-
 </head>
 
 <body>
+
 <br>
+
 <marquee behavior="alternate">
-  It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life.>
+  It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life. It's not a game, but my real life.
 </marquee>
 
 <h1 style="text-align:center;">QQ SHOW</h1>
-<h2 style="text-align:center;">Display of virtual characters in QQ</h2>
 
-<div class="flex-container">
-        <div class="flex-item1"><img src="QQ1.png" alt="1" style="width:272px;height:229px;"></div>
+<h2 style="text-align:center;">the display of virtual characters in QQ</h2>
 
-        <div class="flex-item2">
-            <img src="QQ2.png" alt="2" style="width:255px;height:188px;">
-        </div>
+<div class="container">
 
-        <div class="flex-item3">
-            <img src="QQ3.jpeg" alt="3" style="width:320px;height:214px;">
-        </div>
+  <div class="item1"><img src="QQ1.png" alt="QQshow1" style="width: 272px;height:229px;"></div>
 
-        <div class="flex-item4">
-            <img src="QQ4.png" alt="4" style="width:284px;height:220px;">
-        </div>
+  <div class="item2"><img src="QQ2.png" alt="QQshow2" style="width: 331px; height: 244px;"></div>
+
+  <div class="item4"><img src="QQ4.png" alt="QQshow4" style="width: 312px;height:242px;"></div>
+
+  <div class="item3"><img src="QQ3.jpeg" alt="QQshow3" style="width: 320px; height:213px;"></div>
+
 </div>
 
-<div class="p1">
-  <p>
-  QQ, a communication app developed by Tencent, is one of the most widely used communication apps in China. QQ show is the user's virtual character display. In the QQ show, users can change the appearance of their virtual characters. They can also see each other's QQ show. Therefore, QQ show allows users to form a large-scale virtual community.
-  <br><br>
-  QQ show officially came out in 2003. At that time, there were about 68 million people using the internet in China, and about 45.4% of them chose to use QQ for online chat. Young people are the main users of QQ, and QQ shows are very popular among them. The QQ show is the first step of their aesthetic freedom in the virtual community. In reality, they are young people who are being marginalized, because they have not yet entered society. So they are more eager to be recognized and noticed, and those beauties that cannot be reached in reality can be easily realized in the virtual world.
- </p>
-</div>
-<br>
-<div class="p2">
-  <p>
-  In the virtual world, the characters in the QQ show are equivalent to the users themselves. As long as you spend a little money to open a membership, you can choose any clothes. At that time, everyone would spend a lot of effort to carefully select clothes for their virtual characters, and also change the background to let them live in various environments. The QQ show used to be an important social business card for people, and the behavior of spending money on virtual clothes was also very common. "It's not a game, but my real life" is the slogan of the QQ show.
+<div class="container2">
+  <div class="p1">
+    <p>
+    QQ, a communication app developed by Tencent, is one of the most widely used communication apps in China. QQ show is the display of the user's virtual characters. In the QQ show, users can change the appearance of their virtual characters. They can also see each other's QQ show. In that case, the QQ show allows users to form a large-scale virtual community.
+    <br><br>
+    QQ show officially came out in 2003. At that time, about 68 million people were using the internet in China, and about 45.4% of them chose to use QQ for online chat. Young people are the main users of QQ, and QQ shows are very popular among them. For them, the QQ show is the first step in gaining aesthetic freedom, though it is only in a virtual community. In reality, they are young people who are being marginalized, because they have not yet entered society. So they are more eager to be noticed, and those beautiful things that are out of reach in reality can be easily achieved in the virtual world.
   </p>
+  </div>
+
+  <br>
+
+  <div class="p2">
+    <p>
+    In the virtual world, the QQ show characters are equivalent to the users themselves. As long as they spend a little money to open a membership, they can choose any clothes. At that time, everyone would spend a lot of effort to carefully select clothes for their virtual characters, and also change the background to let them be in various environments. The QQ show used to be an important social business card for people, and the behavior of spending money on virtual clothes was also very common. "It's not a game, but my real life" is the slogan of the QQ show.
+    </p>
+  </div>
+
+  <br>
+
+  <div class="p3">
+    <p>
+    When I first made contact with the internet, QQ was the app that I used the most. Besides chatting with my friends, the QQ show was my favorite. However, I didn't have enough pocket money to get a membership, so I could only choose some basic clothes. The outfit of my virtual character was a regular T-shirt with jeans and canvas shoes. The background was a simple blue sky with green grassland. I was quite satisfied with this because I felt that it was very similar to me in reality. When my friends saw my QQ show, they were like seeing me in person.
+    <br><br>
+    Even so, I yearned for outfits that only members could choose. I couldn't use those clothes, but I went through them one by one in the preview. Members can choose from some much more fancy outfits. There are gorgeous dresses, cool leather jackets, swimsuits, and so on. They can even choose exaggerated wings and angel halos. There are also more backgrounds for members to choose from, such as beaches, castles, and forests. I often spent a lot of time creating my ideal outfit in preview. I wanted to buy it when I had enough money. But when I could control my money, QQ was gradually replaced by other apps, and the QQ show was no longer used by many people. The QQ show is my fashion enlightenment, it teaches me how to match a good outfit. It even goes beyond the concept of fashion, because it is more comprehensive, not only limited to the clothes on the body but also the background and the overall atmosphere. It cultivates my aesthetics to some extent.
+    </p>
+  </div>
 </div>
+
 <br>
-<div class="p3">
-  <p>
-  When I first contact with the internet, QQ was the app that I used the most. Besides chatting with my friends, the QQ show was my favorite. But I didn't have enough pocket money to get a membership, so I could only choose some basic clothes. The outfit of my virtual character was a regular T-shirt with jeans and canvas shoes. The background was a simple blue sky with green grassland. I was quite satisfied with this because I felt that it was very similar to me in reality. When my friends saw my QQ show, they were like seeing me in person.
-  <br><br>
-  Even so, I yearned for outfits that only members could choose from. I couldn't use those clothes, but I went through them one by one in the preview. Members can choose from some much more fancy outfits. There are gorgeous dresses, cool leather jackets, swimsuits, and so on. You can even choose exaggerated wings and angel halos. There are also more backgrounds for members to choose from, such as beaches, castles, and forests. I often spent a lot of time coming up with my ideal outfit in preview. I wanted to buy it when I had enough money. But when I had the ability to control my money, QQ was gradually replaced by other apps, and the QQ show was no longer used by many people. The QQ show is my fashion enlightenment, it teaches me how to match a good outfit. It even goes beyond the concept of fashion, because it is more comprehensive, not only limited to the clothes on the body, but also the background and the general atmosphere. It cultivated my aesthetics to some extent.
-  </p>
-</div>
+<br>
 
 <footer>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">previous</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
-    <br>
-    <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">next</a>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry2/">previous</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry4/">next</a>
+</footer>
     
 </body>
 </html>
