--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -6,40 +6,42 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://use.typekit.net/kml3rmk.css">
 <link rel="stylesheet" href="https://use.typekit.net/rej8ybj.css">
-
-
 <title>Entry 5</title>
-
 </head>
+
 <body>
 
-<div class="t1">
-  <h1>KIDDIE RIDE</h1>
-</div>
+<h1>KIDDIE RIDE</h1>
 
 <h3>an interactive coin-operated ride</h3>
 
 <div class="top">
-  <img src="yb.png" alt=" " width="100" height="100">
+  <img src="yb.png" alt="coin" width="120" height="120">
   <div class="overlay">
-    <div class="top-text">put the coin in the slot</div>
+    <div class="toptext"><h2>put the coin in the slot</h2></div>
   </div>
 </div>
  
 <div class="content">
   <div class="left-text">
-    <p>The kiddie ride is an interactive coin-operated ride that can be ridden by children. They are commonly available in parks, playgrounds, malls, and outside supermarkets. When activated by a coin, the kiddie rides entertain the rider for a short time with a mild motion. Most rides include music and flashing lights. Some of them even have screens on the front, playing some short animation. Kiddie rides are often very colorful with the appearances of some popular cartoon characters.<br><br>Kiddie rides were popular in China during the 2000s. Because a kiddie ride can make a high profit. It doesn’t cost a lot, and there are many children who spend money on it every day.<br><br>When I was a child, kiddie rides were almost everywhere. They were always found in front of the supermarkets. After 2010, kiddie rides gradually disappeared in big cities, and only some of them remained in front of some old buildings. But now we can still see them in children's amusement parks because they are irreplaceable classic entertainment facilities.</p>
+    <p>The kiddie ride is an interactive coin-operated ride that can be ridden by children. They are commonly available in parks, playgrounds, malls, and outside supermarkets. When activated by a coin, the kiddie rides entertain the rider for a short time with a mild motion. Most rides include music and flashing lights. Some of them even have screens on the front, playing some short animation. Kiddie rides are often very colorful with the appearances of some popular cartoon characters.
+    <br><br>
+    Kiddie rides were popular in China during the 2000s because a kiddie ride can make a high profit. It didn't cost a lot, and there were many children who spent money on it every day.
+    <br><br>
+    When I was a child, kiddie rides were almost everywhere. They were always found in front of the supermarkets. After 2010, kiddie rides gradually disappeared in big cities, only a few of them remained in front of some old buildings. But now we can still see them in children's amusement parks because they are irreplaceable classic entertainment facilities.</p>
   </div>
+
   <div class="center-images">
     <div class="center-image">
-      <img src="yyc1.png" alt=" " width="300" height="300">
+      <img src="yyc1.png" alt="kiddieride1" width="350" height="350">
     </div>
     <div class="center-image">
-      <img src="yyc2.png" alt=" " width="300" height="370">
+      <img src="yyc2.png" alt="kiddieride2" width="330" height="420">
     </div>
   </div>
+
   <div class="right-text">
-    <p>I loved playing kiddie rides when I was a child because the whole process was so simple. All I needed to do was to put in a coin and enjoy the joy of swaying to the music. Whenever I passed the kiddie ride in front of the supermarket near my home, I would beg my parents to let me ride. After they agreed, I climbed into it quickly. I liked sitting in the kiddie ride since it was designed for children, just big enough for me to sit inside. This design made me feel safe. I would put a coin into the coin slot, and then the kiddie ride would start moving. Lively music would play, and I would laugh by following the movement of the kiddie ride. This kiddie ride was very popular among the children who lived in this area. When I was waiting in line, I would stared at the child on the kiddie ride with envy. But when I sat on it, I showed off to the children in line. After a few minutes, the music ended and the kiddie ride stopped. I jumped out of it and said goodbye to it.</p>
+    <p>I loved playing kiddie rides when I was a child because the whole process was so simple and fun. All I needed to do was to put in a coin and enjoy the joy of swaying to the music. Whenever I passed the kiddie ride in front of the supermarket near my home, I would beg my parents to let me ride. After they agreed, I climbed into it quickly. I liked sitting in the kiddie ride since it was designed for children, and just big enough for my body. This design made me feel safe. I would put a coin into the coin slot, and then the kiddie ride would start moving. Lively music would play, and I would laugh by following the movement of the kiddie ride. This kiddie ride was very popular among the children who lived in this area. When I was waiting in line, I would stare at the children on the kiddie ride with envy. But when I sat on it, I showed off to the children in line. After a few minutes, the music ended and the kiddie ride stopped. I jumped out of it and said goodbye to it.</p>
   </div>
 </div>
 
@@ -49,6 +51,7 @@
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
     <br>
     <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">next</a>
+</footer>
 
 </body>
 </html>
