--- a/entries/entry10/index.html
+++ b/entries/entry10/index.html
@@ -6,30 +6,35 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://use.typekit.net/atv7ftb.css">
 <link rel="stylesheet" href="https://use.typekit.net/ypw5rfb.css">
-
 <title>Entry 10</title>
-
 </head>
+
 <body>
 
-<div id="imageContainer">
-    <div id="slideshow">
-        <div class="slide"><img src="lx1.png" alt="Image 1"></div>
-        <div class="slide"><img src="lx2.png" alt="Image 2"></div>
-        <div class="slide"><img src="lx3.png" alt="Image 3"></div>
-        <div class="slide"><img src="lx4.png" alt="Image 4"></div>
+<div id="imagecontainer">
+    <div id="slides">
+        <div class="slide"><img src="sjx1.png" alt="Image 1" width="500" height="460"></div>
+        <div class="slide"><img src="sjx2.png" alt="Image 2" width="600" height="600"></div>
+        <div class="slide"><img src="sjx3.png" alt="Image 3" width="500" height="630"></div>
+        <div class="slide"><img src="sjx4.png" alt="Image 4" width="580" height="480"></div>
     </div>
 </div>
 
-<button id="toggleButton" onclick="toggleImage()">choose your jelly sandals!</button>
+<button id="togglebutton" onclick="toggleimage()">choose your jelly sandals!</button>
 
 <div id="title"><h1>JELLY SANDALS</h1></div>
 
 <div id="content">
-	<p>This kind of brightly colored jelly sandals used to be popular among children, as children always yearn for Cinderella's glass slippers. In the real world, we can't get expensive glass slippers, so these shining, cheap sandals suffice for us. Most of these sandals are low-heeled, but some of them are high-heeled, with gemstones and bowknots, made like Disney princesses' shoes, so this kind of high heels is often more popular among children. These sandals are soft and light. In the summer, it was common to see girls wearing them, stepping on the ground, and making a clattering sound. But their quality is not that good, I've worn out a few pairs. In previous years, these kinds of jelly sandals were always said to be ugly, but the recent rise of the Y2K fashion style has made some fashionistas wear their childhood favorite sandals again and present them in a new way.</p>
+	<p>This kind of brightly colored jelly sandals used to be popular among children, as they always yearn for Cinderella's glass slippers. In the real world, we can't get expensive glass slippers, so these shining, cheap sandals suffice us. Most of these sandals are low-heeled, but some of them are high-heeled, decorated with gemstones and bowknots, just like Disney princesses' shoes, so this kind of high heels is often more popular among children. These sandals are soft and light. In the summer of ten years ago, it was common to see girls wearing them, stepping on the ground, and making a clatter. But the quality of jelly sandals is not that good, I've worn out a few pairs so I can prove that. In previous years, this kind of jelly sandals was always called ugly, but the recent rise of the Y2K fashion style has made some fashionistas wear their childhood favorite sandals again and present them in a new way.</p>
 </div>
 
-<div id="scrollingText">I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!</div>
+<div id="scrollingtext">I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!<br><br><br><br><br><br><br><br><br><br><br><br>I HAVE GLASS SLIPPERS!</div>
+
+<footer>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry9/">previous</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
+</footer>
 
 <script src="main.js" defer></script>
 
