--- a/entries/entry9/index.html
+++ b/entries/entry9/index.html
@@ -13,27 +13,35 @@
 
 <div class="container">
 
-        <div class="title"><h1>WATER TOWER</h1></div>
+    <div class="title"><h1>WATER TOWER</h1></div>
 
-        <div class="text">
-            <p>The water tower is a tall structure used to store and distribute water. Water towers are common in cities, they successfully blend into the city yet stand out. Most water towers are built without considering their aesthetics since they are just practical buildings, but they have a special industrial aesthetic. The water tower is my favorite building. When I was a child, I didn’t know the function of a water tower, so I always thought it was a watchtower. I believed a lonely princess lived inside the tower, always calmly watching everything happening around her, waiting to be rescued by a hero. If I went to the bottom of the tower and called her, she would put her long hair down. I also thought the water tower looked like a UFO. If I walked under it, I might be captured by aliens. Unfortunately, these old water towers are disappearing. The original intention of their design was to meet the actual needs of water supply in the early days of the cities. With the development of the cities, they seem to be demolished as useless things after losing this value.</p>
-        </div>
+    <div class="text">
+        <p>The water tower is a tall structure used to store and distribute water. Water towers are common in cities, they successfully blend into the city yet stand out. Most of them are built without considering their aesthetics since they are just practical structures, but they have a special industrial aesthetic. The water tower is my favorite building. When I was a child, I didn’t know the function of a water tower, so I always thought it was a watchtower. I believed there was a lonely princess who lived inside the tower, always calmly watching everything happening around her, waiting to be rescued by a hero. If I went to the bottom of the tower and called her, she would put her long hair down and let me climb up. I also thought the water tower looked like a UFO. If I walked under it, I might be captured by aliens. Unfortunately, these old water towers are disappearing. The original intention of their design was to meet the actual needs of water supply in the early days of the cities. With the development of the cities, they are demolished as useless things after losing this value.</p>
+    </div>
 
-        <div class="wt">
-            <img src="tgst.png" alt="water tower" width="450" height="750">
-            <p class="caption">Want to see how they disappear?</p>
-            <a href="#" onclick="showVideoModal()">click here</a>
-        </div>
+    <div class="wt">
+        <img src="tgst.png" alt="water tower" width="450" height="750">
+        <p class="caption">Want to see how they disappear?</p>
+        <a href="#" onclick="showvideo()">click here</a>
+    </div>
+
+</div>
+
+<div id="video">
+
+    <iframe width="650" height="365" auto src="https://www.youtube.com/embed/FZVHG7C62Xs?si=fmkM5GmdnewmBuCD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <button onclick="hidevideo()">close</button>
 
 </div>
 
- <div id="video-modal">
-
-            <iframe width="650" height="365" auto src="https://www.youtube.com/embed/FZVHG7C62Xs?si=fmkM5GmdnewmBuCD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-        <button onclick="hideVideoModal()">close</button>
-
-</div>
+<footer>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">previous</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>
+  <br>
+  <a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry10/">next</a>
+</footer>
 
 <script src="main.js" defer></script>
 
