--- a/entries/entry7/index.html
+++ b/entries/entry7/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="https://use.typekit.net/pvz7ouz.css">
 <link rel="stylesheet" href="https://use.typekit.net/pvz7ouz.css">
 <title>Entry 7</title>
-
 </head>
+
 <body>
 
 <h1>POWDERED MILK TEA</h1>
@@ -27,7 +27,7 @@
 <div class="center-text">
 	<p>As a big fan of milk tea, it is no exaggeration to say that I have seen the whole development history of milk tea in China because I have drunk milk tea at every stage. The one that impressed me most was the powdered milk tea I often drank when I was a child.<br><br>
  	The earliest milk tea in China was always sold together with other foods. Gradually, some milk tea food carts and small milk tea shops with simple storefronts began to appear next to schools and at night markets. They were simple to operate and low-cost. Milk tea at that time was simple to make, since it was usually brewed with milk tea powder. The quality of this kind of milk tea is not good, and not healthy. But for the children at that time, this kind of drink was cheap and popular, so they always bought a cup of milk tea after school. However, they could not avoid being punished by their parents when they got home because their parents thought it was junk food. Such a simple cup of milk tea has become a common childhood memory for our generation.<br><br>
-    Later, people began to pay more attention to whether milk tea was healthy, so powdered milk tea gradually withdrew from the stage and was replaced by milk tea made of real tea and milk. I enjoy this healthier and tastier version of milk tea but occasionally miss the simple powdered milk tea I drank before. There is almost no such milk tea in big cities anymore, but when I traveled to a small city two years ago, I found some milk tea shops that still kept using milk tea powder. I bought a cup of milk tea,  took a sip, and yelled that now I feel like I am in 2010.</p>
+    Later, people began to pay more attention to whether milk tea was healthy, so powdered milk tea gradually stepped down from the stage and was replaced by milk tea made of real tea and milk. I enjoy this healthier and tastier version of milk tea but occasionally miss the simple powdered milk tea I drank before. There is almost no such milk tea in big cities anymore, but when I traveled to a small city two years ago, I found some milk tea shops that still kept using milk tea powder. I bought a cup of milk tea,  took a sip, and yelled: "Now I feel like I am in 2010!"</p>
 </div>
 
 <div class="right-image">
@@ -39,7 +39,7 @@
 </div>
 
 <div class="bottom-image">
-	<img src="fen.png" alt="milk tea powder" width="354" height="450" class="image3">
+	<img src="fen.png" alt="milk tea powder" width="380" height="450" class="image3">
 	<div class="hover3">
 		<div class="text3">These are milk tea powders with various flavors. In the past, this kind of fruit-flavored milk tea was very popular, even though it was full of pigments.
 		</div>
@@ -50,11 +50,12 @@
 	<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry6/">previous</a>
 	<br>
 	<a href="https://aimeeyi01.github.io/aimeeyi.github.io/homepage/">home</a>	
+	<br>
+	<a href="https://aimeeyi01.github.io/aimeeyi.github.io/entries/entry8/">next</a>
 </footer>
 
-
-
-
+</body>
+</html>
 
 
  
